@@ -2,11 +2,6 @@
 // file: app_define_action.php
 // author: Bill MacAllister
 
-// Open a session and check for authorization
-require('whm_php_sessions.inc');
-require('whm_php_auth.inc');
-whm_auth("ldapadmin");
-
 // -------------------------------------------------------------
 // main routine
 
