@@ -2,11 +2,6 @@
 // file: computer_maint_action.php
 // author: Bill MacAllister
 
-// Open a session and check for authorization
-require('whm_php_sessions.inc');
-require('whm_php_auth.inc');
-whm_auth("ldapadmin");
-
 require('/etc/whm/macdir_auth.php');
 require('inc_util.php');
 require ('inc_pwset.php');
