@@ -2,11 +2,6 @@
 # file: my_links_maint.php
 # author: Bill MacAllister
 
-# Open a session and check for authorization
-require('whm_php_sessions.inc');
-require('whm_php_auth.inc');
-whm_auth("ldapadmin|user");
-
 $title = 'Link Maintenance';
 $heading = 'Link Maintenance';
 
