@@ -2,11 +2,6 @@
 // file: user_maint_action.php
 // author: Bill MacAllister
 
-// Open a session and check for authorization
-require('whm_php_sessions.inc');
-require('whm_php_auth.inc');
-whm_auth("ldapadmin");
-
 require('inc_config.php');
 
 // --------------------------------------------------------------
